<resources>
    <string name="facebook_app_id">850923226198112</string>
    <string name="fb_login_protocol_scheme">fb850923226198112</string>
    <string name="facebook_client_token">b1351c17e43ee9b31b3a3711b1aa85bf</string>
    <string name="app_name">Validaton FormGrewon</string>
    <string name="Collage">montu collage</string>
    <string name="uUang">umang</string>
    <string name="Enter_the_name">enter the name</string>
    <string name="Enter_same_password">Enter your same password</string>
    <string name="Create_passworld">create passworld</string>
    <string name="Enterr_name">enter your name</string>
    <string name="Welcome_back">Welcome back!</string>
    <string name="Please_login_our_app">Please login our app</string>
    <string name="Enter_create_passworld">enter your create passworld</string>
    <string name="Enter_register_email">emter your register email</string>
    <string name="Welcome">Welcome!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Select_gender">Select gender</string>
    <string name="Sing_up">Sing up</string>
    <string name="Log_in">Log in</string>
    <string name="You_have_not_account">you have not account ?</string>
    <string name="Enter_you_register_passworld">enter you register passworld</string>
    <string name="Create_your_Account">Don\'t have an account? <u><font fgcolor="#FF3700B3">Signup</font></u></string>
    <string name="create_password">create password</string>
    <string name="Came_password">same password</string>
    <string name="Enter_register_password" />
    <string name="Enter_name">Enter name</string>
    <string name="Enter_email">Enter email</string>
    <string name="enter_register_email">Enter register email</string>
    <string name="enter_register_password">Enter register password</string>
    <string name="you_have_alredy_create_account_login">You have alredy create account ? Login</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="conform_password">Confrom password</string>
    <string name="save">save</string>
    <string name="forget_password">Forget password</string>
    <string name="update_password">Update password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_emailadress">Enter emailadress</string>
    <string name="log_out">Log out</string>
    <string name="Already_register_email">already register email</string>
    <string name="Enter_valid_format_email">Enter  valid format  email</string>
    <string name="Select_your_gender">select your gender</string>
    <string name="enter_valid_format_email">enter valid format email</string>
    <string name="uppercase_with_lower_case">\"uppercase with lower case \"</string>
    <string name="please_select_image">please select image</string>
    <string name="Registration_Successfully">Registration Successfully</string>
    <string name="Upper_case_with_lover_case_character">\" Upper case with lover case character\"</string>
    <string name="logout_successfully">\"logout successfully \"</string>
    <string name="password_is_wrong">Password is wrong!</string>
    <string name="your_email_address_is_not_exist">Your email address is not exist!</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Enter password</string>
    <string name="search_here">Search Here</string>
    <string name="sports">Sports</string>
    <string name="Bikes">Bike</string>
    <string name="mobiles">Mobile</string>
    <string name="shirt">Shirt</string>
    <string name="t_shirt">T-shirt</string>
    <string name="laptop">Laptop</string>
    <string name="jewellery">Jewellery</string>
    <string name="bottle">Bottle</string>
    <string name="lunch_Box">LunchBox</string>
    <string name="LightLamp">Light Lamp</string>
    <string name="Facial_wash">FacialWash</string>
    <string name="AC">Ac</string>
    <string name="healthy_hair">Healthy Hair</string>
    <string name="Zandu">Zandu</string>
    <string name="Home_premium_store">Home Preimium </string>
    <string name="Symactive">Symactive</string>
    <string name="Manjauar">Manjauar</string>
    <string name="VEG_roll">Veg Roll</string>
    <string name="TIKKA_burgurr">Tikka Burgur</string>
    <string name="ice_color">Ice_Coolers</string>
    <string name="prei_peri">Peri Peri</string>
    <string name="French_fries">French fries</string>
    <string name="French_Image">https://assets3.thrillist.com/v1/image/3074109/1200x600/scale;</string>
    <string name="pri_periImage">https://images.jdmagicbox.com/comp/def_content_category/burger-king-11979653-gptol9hljo.jpg</string>
    <string name="ice_image">https://images.jdmagicbox.com/comp/def_content_category/burger-king/burger-king-92-6kcg8.jpg</string>
    <string name="TikkaImage">https://d1rgpf387mknul.cloudfront.net/products/PLP/web/2x_web_20221115132250245842_482x264jpg</string>
    <string name="VegImage">https://d1rgpf387mknul.cloudfront.net/products/PLP/web/2x_web_20210610101725175772_482x264jpg</string>
    <string name="boss_whopper_veg">Boss Whopper Veg</string>
    <string name="boss_image">https://d1rgpf387mknul.cloudfront.net/products/PLP/web/2x_web_20221115132250245842_482x264jpg</string>
    <string name="Manjauar_image">https://images-eu.ssl-images-amazon.com/images/G/31/img21/MA2022/DEC_WRS22/PC_ethnic/Ethenick_00.jpg</string>
    <string name="Symactive_image">https://images-eu.ssl-images-amazon.com/images/G/31/img22/Mountain_cycle_Sports-GL_Banner_card_1400x800.jpg</string>
    <string name="homepreimium_image">https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/OHL-creatives-2022/440x460_2.jpg</string>
    <string name="Zanduimage">https://images-eu.ssl-images-amazon.com/images/G/31/img21/HPC/Coop/Zandu-440x330.jpg</string>
    <string name="helthyharimage">https://m.media-amazon.com/images/I/51i7gk5J8EL._SX679_.jpg</string>
    <string name="Acimage">https://guysac.com/wp-content/uploads/Air-Conditioning-Tips.jpeg</string>
    <string name="Facialimage">https://m.media-amazon.com/images/S/al-eu-726f4d26-7fdb/7872d76d-14cf-4175-9842-adcd508b5951._CR0,0,1200,628_SX430_QL70_.jpg</string>
    <string name="lightimage">https://m.media-amazon.com/images/I/6139mdwFplL._SY500_.jpg</string>
    <string name="lunchboximage">https://loveincorporated.blob.core.windows.net/contentimages/gallery/e70d04f7-1696-4bcb-9b53-b820f6fc72a3-baibaz.jpg</string>
    <string name="bottleimage">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7eqh1k38VyOMSfqkEu_qhAKrkzRhyMCP75dnZ3yjlRlr-VmUXz7ddJUkReVpri0zyNYI&amp;usqp=CAU</string>
    <string name="jewllriimage">https://staticimg.titan.co.in/Tanishq/Catalog/5114182UMABA00_1.jpg</string>
    <string name="laptopsimage">https://mms.businesswire.com/media/20150902005366/en/483745/5/Satellite_Radius_12_9.jpg</string>
    <string name="t_shiretimage">https://static-01.daraz.pk/p/5ddcaf9cb7938693caed0f7ac18ed7b2.jpg</string>
    <string name="sharetsimage">https://rukminim1.flixcart.com/image/612/612/xif0q/shirt/x/m/n/40-men-regular-slim-fit-solid-button-down-collar-formal-shirt-original-imagf4mn9zg7qrmf-bb.jpeg?q=70</string>
    <string name="mobileimage">https://images.unsplash.com/photo-1569422586959-a95e5b2b934a?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NXx8fGVufDB8fHx8&amp;w=1000&amp;q=80</string>
    <string name="sportimage">https://wallpaper.dog/large/5480912.jpg</string>
    <string name="bikesimage">https://static.toiimg.com/thumb/msid-91310527,width-400,resizemode-4/91310527.jpg</string>
    <string name="burger_auto">https://img.freepik.com/premium-psd/delicious-burger-food-menu-web-banner-template_106176-408.jpg?w=2000</string>
    <string name="pizza_auto">https://img.pikbest.com/origin/06/29/44/69upIkbEsTAZD.png!w700wp</string>
    <string name="veg_auto">https://www.mapsofindia.com/ci-moi-images/my-india/2020/04/health-benefits-of-eating-vegetarian-food.jpg</string>
    <string name="best_vegitables">https://i.ytimg.com/vi/g0uE2QO7Tr0/maxresdefault.jpg</string>
    <string name="rawimage">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVBKE5SqZwvXw7vyMmUQAVG0mMnkLrokZ7Wg&amp;usqp=CAU</string>
    <string name="circleim">circleim</string>
    <string name="price199">199</string>
    <string name="_4_2">4.2</string>
    <string name="mobile">mobile</string>
    <string name="_2_5">2.5</string>
    <string name="_mobile">mobile</string>
    <string name="title_of_list">Title of list</string>
    <string name="_2_5ss">(4.0)</string>
    <string name="each_lama_is_unisex_amp_size_inclusive_which_means_we_are_one_size_fits_all"><![CDATA[Each Lama is unisex & size-inclusive which means we are one size fits all]]></string>
    <string name="_home">Home</string>
    <string name="_profile">profile</string>
    <string name="_setting">setting</string>
    <string name="_2_5_">(2.5)</string>
    <string name="update_your_profile">update your profile</string>
    <string name="update">update</string>
    <string name="select_gender">select gender</string>
    <string name="record_add_successfully">Record added successfully</string>
    <string name="burger_king">Burger King</string>
    <string name="burger_king_is_an_american_based_multinational_chain_of_hamburger_fast_food_restaurants_headquartered_in_miami_dade_county_florida_the_company_was_founded_in_1953">Burger King is an American-based multinational chain of hamburger fast food restaurants. Headquartered in Miami-Dade County, Florida, the company was founded in 1953</string>
    <string name="s_no_4_amp_5_gf_valentina_business_hub_lp_savani_rd_adajan_surat_gujarat_395009"><![CDATA[S No 4 & 5, GF, Valentina Business Hub, LP Savani Rd, Adajan, Surat, Gujarat 395009]]></string>
    <string name="items_menu">Items Menu</string>
    <string name="_199">199</string>
    <string name="_99">99</string>
    <string name="_250">250</string>
    <string name="_149">149</string>
    <string name="add">ADD</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_pluse">+</string>
    <string name="_0_item">0 Item</string>
    <string name="_0_00"> 0.00</string>
    <string name="_point">|</string>
    <string name="item">Item</string>
    <string name="name_of_person">Name of Person</string>
    <string name="description">description</string>
    <string name="this_send_message">This Send Message</string>
    <string name="vaholiya_gautam_c">Vaholiya Gautam C</string>
    <string name="android_devloper">Android Devloper</string>
    <string name="type_a_message">Type a message</string>
    <string name="time">time</string>
    <string name="this_reciver_message">This Reciver Message</string>
    <string name="log_in_mobile">Log in mobile</string>
    <string name="rigister_emil_google">rigister emil google</string>
    <string name="login_with_mobile">Login With Mobile</string>
    <string name="we_will_send_you_a_one_time_password">We Will send you a One Time Password</string>
    <string name="on_your_phone_number">on Your phone number</string>
    <string name="get_otp">GET otp</string>
    <string name="enter_phonen_number">Enter Phonen Number</string>
    <string name="you_will_get_a_otp_via_sms">You Will get a OTP via SMS</string>
    <string name="verification">Verification</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="permission">permission</string>
    <string name="_blank" />
    <string name="smsgranted">\"SMS  granted \"</string>
    <string name="smsdenied">\"SMS  denied \"</string>
    <string name="locationgranted">\"Location permission granted \"</string>
    <string name="locationdenied">\"Location permission denied \"</string>
    <string name="your_current_location">your current location</string>
    <string name="change_password">change password</string>
    <string name="change_profile">change profile</string>
</resources>