<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:indeterminate = "true"
        android:max="100"
        android:minWidth="@dimen/_50dp"
        android:indeterminateTint="@color/black"
        android:minHeight="50dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:progress="0" />

    <LinearLayout
        android:id="@+id/ly_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_34sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4dp"
            android:text="@string/Please_login_our_app"
            android:textColor="@color/newblack"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sh_llemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30"
            android:hint="@string/enter_emailadress"
            app:boxStrokeWidth="1dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sh_llpassworld"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:hint="@string/enter_password"
            app:boxStrokeWidth="@dimen/_1dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_lconpassworld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="false"
                android:gravity="center_vertical"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/remember"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password"
                android:textColor="@color/newblack"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/Log_in"
            android:textSize="@dimen/_16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/iconelogim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_layout"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/_10dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/google" />


        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginStart="@dimen/_10dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_loginmobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconelogim"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:background="?selectableItemBackground"
        android:text="@string/login_with_mobile"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_younotaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="?selectableItemBackground"
        android:gravity="center_horizontal"
        android:padding="@dimen/_16"
        android:text="@string/Create_your_Account"
        android:textColor="@color/newblack"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />

</RelativeLayout>