<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cr_cardview"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardCornerRadius="@dimen/_4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5dp"
                app:cardUseCompatPadding="true">


                <ImageView
                    android:id="@+id/iv_tmage"
                    android:layout_width="@dimen/_110dp"
                    android:layout_height="@dimen/_90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/burguerauto" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="@dimen/_90dp"
                android:layout_height="@dimen/_40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_10dp"
                app:cardCornerRadius="@dimen/_4dp"
                app:cardElevation="@dimen/_3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/lv_ADD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textAllCaps="true"
                        android:textColor="@color/background1"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lv_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_minus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/minus"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_plus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_pluse"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_6dp"
            android:paddingHorizontal="@dimen/_4dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_titel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_of_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/each_lama_is_unisex_amp_size_inclusive_which_means_we_are_one_size_fits_all"
                android:textSize="@dimen/_12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/Rt_rattingbar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_13dp"
                    android:layout_gravity="center_vertical"
                    android:rating="4"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/ratting_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:text="@string/_2_5ss"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
                    android:text="@string/_199"
                    android:textColor="@color/black" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
